HEARTH-426 fixed wrong positioning of messages container on mobile

--- a/app/app/styles/_messages.scss
+++ b/app/app/styles/_messages.scss
@@ -323,8 +323,8 @@
 				.nano-content {
 					max-height: 100%;
 					article {
-						width: 560px;
-						margin-right: 45px;
+						max-width: 600px;
+						margin-right: 10px;
 						margin-top: 10px;
 						p {
 							font-size: 14px;
